--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,11 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
-    }
+      "@/*": ["./src/app/*"],
+      "@fonts/*": ["./public/fonts/*"],
+      "@components/*": ["./components/*"],
+    },
+    "baseUrl": "."
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
