--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,21 @@
     ],
     "routes": [
       {
+        "src": "/fonts/(.*)",
+        "dest": "/public/fonts/$1",
+        "headers": {
+          "Cache-Control": "public, max-age=31536000, immutable"
+        }
+      },
+      {
         "src": "/(.*)",
-        "dest": "/"
+        "dest": "/$1"
+      }
+    ],
+    "rewrites": [
+      {
+        "source": "/(.*)",
+        "destination": "/"
       }
     ]
   }
