--- a/vercel.json
+++ b/vercel.json
@@ -1,28 +1,3 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "package.json",
-        "use": "@vercel/next"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/fonts/(.*)",
-        "dest": "/public/fonts/$1",
-        "headers": {
-          "Cache-Control": "public, max-age=31536000, immutable"
-        }
-      },
-      {
-        "src": "/(.*)",
-        "dest": "/$1"
-      }
-    ],
-    "rewrites": [
-      {
-        "source": "/(.*)",
-        "destination": "/"
-      }
-    ]
-  }
+    "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+}
