--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@svgr/webpack": "^8.1.0",
     "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "simplex-noise": "^4.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
